# llm_benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
src/llm_benchmark/: __init__.py  client.py  evaluation.py  main.py
src/llm_benchmark/cli/: __init__.py  run.py
src/llm_benchmark/datasets/: __init__.py  base.py  lcsts.py  truthfulqa.py  xsum.py
src/llm_benchmark/evaluators/: __init__.py  acc.py  base.py  bleu.py  em.py  rouge.py
src/llm_benchmark/inference/: __init__.py  base.py  oai_compatible.py
tests/: test_lcsts.py
