[project]
name = "llm_benchmark"
version = "0.1.0"
description = "LLM sampling parameters benchmark for summarization datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "rouge>=1.0.1",
    "rouge-chinese>=1.0.3",
    "rouge-score>=0.1.2",
    "tqdm>=4.67.3",
]

[project.scripts]
benchmark = "llm_benchmark.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_benchmark"]
